# ArtemisInRealTime

./: .env.example  .gitattributes  .gitignore  .prettierrc.json  IO_DATA_EXPLAINED.md  LICENSE  PLANNING_DATA_INGESTION.md  QUESTIONS_BEFORE_BUILD.md  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  stylelint.config.js  tsconfig.json  tsconfig.vitest.json  vite.config.mts  vitest.config.ts
.github/workflows/: deploy.yml
_webroot/: index.css  index.html  index.js
src/: App.tsx  index.html  index.tsx
src/pages/: ComingSoon.module.css  ComingSoon.tsx
src/server-batch/: AUDIT.md  _audit_coverage.py  _check.py  _check_wav.py  _debug.py  _test_flickr.py  _test_ia_stills.py  _test_io_queries.py  config.py  requirements.txt  run_all.py
src/server-batch/1_comm/: 1a_download_ia_zips.py  1b_transcribe.py  1c_web_comm.py  README.md
src/server-batch/2_video/: 2a_ia_video_discover.py  2b_ia_video_download.py  2c2_io_video_catalog.py  2c_io_search.py  2d_yt_metadata.py  2e_yt_download.py  2f_ia_video_metadata.py  2g_web_video.py  README.md
src/server-batch/3_photos/: 3a2_io_photo_catalog.py  3a3_io_exif_scrape.py  3a_ia_stills_download.py  3b_flickr_albums.py  3e2_io_nhq_lookup.py  3e_images_nasa_gov.py  3f_web_photos.py  README.md
src/server-batch/shared/: README.md  flickr_api.py  ia_helpers.py  io_api.py
src/styles/: global.css
src/tests/: ComingSoon.test.tsx  vitest.setup.ts
src/typings/: declarations.d.ts
